--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
     <header>
         <nav class="navig">
             <ul>
-                <span><a class="btn" href="mycabinet.html">Xnjnj</a></li>
-                <span><a class="btn" href="mycabinet.html">uedu</a></li>
-                <span><a class="btn" href="mycabinet.html">LK</a></li>
+                <span><a class="btn" href="mycabinet.html">Xnjnj</a></span>
+                <span><a class="btn" href="mycabinet.html">uedu</a></span>
+                <span><a class="btn" href="mycabinet.html">LK</a></span>
             </ul>
 
         </nav>
@@ -33,8 +33,8 @@
         <div class="aboutComp">
             <img src="static/image/Без имени.jpg" alt="compimage" width="100%" height="150px">
             <p>
-                uvfehfbubfvubvbbsvfs  eribvubrfbubvf eiuibuvauvbuivbsubafivurenvuifbv
-                avivbrubsvbfvhbfv fvuebvbf    fvebfvuebbvibduybvdbve vevybfiabvfvvfbbbbbbbbbbbbb
+                uvfehfbubfvubvbbsvfs eribvubrfbubvf eiuibuvauvbuivbsubafivurenvuifbv
+                avivbrubsvbfvhbfv fvuebvbf fvebfvuebbvibduybvdbve vevybfiabvfvvfbbbbbbbbbbbbb
             </p>
         </div>
 
@@ -57,45 +57,18 @@
                         </tr>
                     </thead>
 
-                    <tbody>
-                        <tr>
-                            <td>Новичек</td>
-                            <td>Для новичков</td>
-                            <td>Красная площадь</td>
-                            <td>
-                                <button class="select-button" onclick="">Выбрать</button>
-                                <div class="checkbox-list">
-                                    <input type="checkbox" id="checkbox1"> <label for="checkbox1">1</label><br>
-                                    <input type="checkbox" id="checkbox2"> <label for="checkbox2">2</label><br>
-                                    <input type="checkbox" id="checkbox3"> <label for="checkbox3">3</label>
-                                </div>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>почти новичек</td>
-                            <td>Для почти новичков</td>
-                            <td>Красная площадь и москва сити</td>
-                            <td>
-                                <button class="select-button" onclick="">Выбрать</button>
-                                <div class="checkbox-list">
-                                    <input type="checkbox" id="checkbox1"> <label for="checkbox1">1</label><br>
-                                    <input type="checkbox" id="checkbox2"> <label for="checkbox2">2</label><br>
-                                    <input type="checkbox" id="checkbox3"> <label for="checkbox3">3</label>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
                 </table>
 
                 <div class="pagination">
                     <button id="back">Назад</button>
-                    <span id="curP">1</span>
-                    <span id="curP">2</span>
-                    <span id="curP">3</span>
-                    <span id="curP">4</span>
-                    <span id="curP">5</span>
-                    <span id="curP">6</span>
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
+                        <li>6</li>
+                    </ul>
                     <button id="next">Вперед</button>
                 </div>
             </div>
