--- a/home.html
+++ b/home.html
@@ -41,6 +41,7 @@
         <div class="form-container">
             <div class="search-form">
                 <input id="search" type="text" placeholder="Поиск" style="width: 120px; height: 25px;">
+                <button id="sB">#</button>
             </div>
             <div class="fill-form">
                 <input id="fill" type="text" placeholder="Цель" style="width: 100px; height: 25px;">
