--- a/mycabinet.html
+++ b/mycabinet.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Личный кабинет</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="static/image/iconn.ico">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link  href="static/scrypt.js">
-        <link rel="stylesheet" href="static/style.css">
-    </head>
-    <body>
-        
-        <h1>Ghbdtn</h1>
+
+<head>
+    <meta charset="utf-8">
+    <title>Главная</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="static/image/iconn.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="mycabinet.html">
+    <script src="static/scrypt.js" defer></script>
+    <link rel="stylesheet" href="static/style.css">
+</head>
+
+<body>
+    <header>
+        <nav class="navig">
+            <ul>
+                <span><a class="btn" href="home.html">Вернуться на главную</a></span>
+
+            </ul>
+
+        </nav>
+        <div class="site_icon">
+            <img src="static/image/Без имени.jpg" alt="iconka" width="70px" height="70px">
+            <span class="comp_name">Компас</span>
+            <span class="comp">Путешествия по Москве</span>
+        </div>
+    </header>
+
+    <main>
+
+        <div class="zayavki">
+            <h2>оставленные заявки</h2>
+            <div class="form-container">
+                <div class="search-form">
+                    <input id="search" type="text" placeholder="Поиск" style="width: 120px; height: 25px;">
+                    <button id="sB">#</button>
+                </div>
+                <div class="fill-form">
+                    <input id="fill" type="text" placeholder="Цель" style="width: 100px; height: 25px;">
+                </div>
+
+                <div class="table-container">
+                    <table id="tableRoute">
+                        <thead>
+                            <tr>
+                                <th>Название</th>
+                                <th>Описание</th>
+                                <th>Объекты</th>
+                                <th>Достопримечательности</th>
+                            </tr>
+                        </thead>
+
+                    </table>
+
+                    <div class="pagination">
+                        <ul>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-    </body>
+
+    </main>
+
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; Все права защишены</p>
+            <p>Фирма не несет ответственности за что бы то ни было, по вине кого бы то ни было</p>
+        </div>
+    </footer>
+
+</body>
+
 </html>
