--- a/mycabinet.html
+++ b/mycabinet.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="static/image/iconn.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="mycabinet.html">
-    <script src="static/scrypt.js" defer></script>
+    <script src="static/scrypt2.js" defer></script>
     <link rel="stylesheet" href="static/style.css">
 </head>
 
