--- a/mycabinet.html
+++ b/mycabinet.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    
+
     <header>
         <nav class="navig">
             <ul>
@@ -42,13 +44,14 @@
                 </div>
 
                 <div class="table-container">
-                    <table id="tableRoute">
+                    <table id="zayavkiTable">
                         <thead>
                             <tr>
-                                <th>Название</th>
-                                <th>Описание</th>
-                                <th>Объекты</th>
-                                <th>Достопримечательности</th>
+                                <th>№</th>
+                                <th>Маршрут</th>
+                                <th>Дата</th>
+                                <th>Стоимость</th>
+                                <th></th>
                             </tr>
                         </thead>
 
@@ -62,6 +65,8 @@
                 </div>
             </div>
         </div>
+
+
 
 
 
