--- a/home.html
+++ b/home.html
@@ -71,11 +71,8 @@
     <header>
         <nav class="navig">
             <ul>
-                <span><a class="btn" href="mycabinet.html">Xnjnj</a></span>
-                <span><a class="btn" href="mycabinet.html">uedu</a></span>
                 <span><a class="btn" href="mycabinet.html">LK</a></span>
             </ul>
-
         </nav>
         <div class="site_icon">
             <img src="static/image/Без имени.jpg" alt="iconka" width="70px" height="70px">
@@ -85,13 +82,25 @@
     </header>
 
     <main id="mainn">
+        <img src="static/image/Без имени.jpg" alt="compimage" width="100%" height="150px">
         <div class="aboutComp">
-            <img src="static/image/Без имени.jpg" alt="compimage" width="100%" height="150px">
-            <p>
-                uvfehfbubfvubvbbsvfs eribvubrfbubvf eiuibuvauvbuivbsubafivurenvuifbv
-                avivbrubsvbfvhbfv fvuebvbf fvebfvuebbvibduybvdbve vevybfiabvfvvfbbbbbbbbbbbbb
-            </p>
+            <div class="aboutComp1">
+                <p class="aboutComp1P">
+                    Добро пожаловать в увлекательный мир Москвы с нашей туристической компанией!
+                    Мы специализируемся на создании незабываемых и уникальных туров по столице России.
+                    Наша цель - погрузить вас в атмосферу богатой истории, современной культуры и захватывающих
+                    развлечений.
+                </p>
+            </div>
+            <div class="aboutComp2">
+                <p>Наши преимущества</p>
+                <span>Надежность</span>
+                <span>Безопасность</span>
+                <span>Стабильность</span>
+                <span>Уникальность</span>
+            </div>
         </div>
+
 
         <div class="routs">
             <div class="form-container">
