--- a/home.html
+++ b/home.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="static/image/iconn.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="mycabinet.html">
     <script src="static/scrypt.js" defer></script>
     <link rel="stylesheet" href="static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,12 +21,12 @@
 
             <div class="tripDate">
                 <span>Дата экскурсии</span>
-                <p><input type="text"></p>
+                <p><input type="date" id="Date"></p>
             </div>
 
             <div class="tripTime">
                 <span>Время экскурсии</span>
-                <p><input type="text"></p>
+                <p><input type="time" id="Time"></p>
             </div>
 
             <div class="tripDlit">
@@ -35,8 +36,6 @@
                     <option value="1">1 час</option>
                     <option value="2">2 часа</option>
                     <option value="3">3 часа</option>
-                    <option value="4">4 часа</option>
-                    <option value="5">5 часов</option>
                 </select>
             </div>
 
@@ -92,13 +91,40 @@
                     развлечений.
                 </p>
             </div>
-            <div class="aboutComp2">
-                <p>Наши преимущества</p>
-                <span>Надежность</span>
-                <span>Безопасность</span>
-                <span>Стабильность</span>
-                <span>Уникальность</span>
+            <div class="aboutComp2 container-fluid bg-warning-subtle" style="width: 800px; border-radius: 12px;">
+                <h2>Наши преимущества</h2>
+                <div class="row mt-5">
+                    <div class="col-md-4 text-center ">
+                        <img class="immg" src="static/image/nadezh.png">
+                        <p>Надежность</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img class="immg" src="static/image/security.png" alt="">
+                        <p>Безопасность</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img class="immg" src="static/image/stable.png" alt="">
+                        <p>Стабильность</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img class="immg" src="static/image/only.png" alt="">
+                        <p>Уникальность</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img class="immg" src="static/image/easy.png" alt="">
+                        <p>Доступные цены</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img class="immg" src="static/image/giga.png" alt="">
+                        <p>Гигагиды</p>
+                    </div>
+                </div>
             </div>
+        </div>
+
+        <div class="alerts" id="alerts">
+            <span class="allOk" id="allOk">Заявка успешно оформлена</span>
+            <span class="allNotOk" id="allNotOk">Заявка не оформлена</span>
         </div>
 
 
@@ -121,8 +147,8 @@
                             <tr>
                                 <th>Название</th>
                                 <th>Описание</th>
-                                <th>Объекты</th>
                                 <th>Достопримечательности</th>
+                                <th></th>
                             </tr>
                         </thead>
 
@@ -143,13 +169,21 @@
 
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; Все права защишены</p>
-            <p>Фирма не несет ответственности за что бы то ни было, по вине кого бы то ни было</p>
+    <footer class="footer bg-dark">
+        <div class="container text-white mx-2 p-3">
+            &copy; Все права защишены
         </div>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+
 </body>
+
 
 </html>
