--- a/mycabinet.html
+++ b/mycabinet.html
@@ -7,13 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="static/image/iconn.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="mycabinet.html">
     <script src="static/scrypt2.js" defer></script>
     <link rel="stylesheet" href="static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    
+  <!-- Modal -->
+  <div class="modal fade" id="deleteModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Вы точно хотите удалить эту заявку
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
+          <button type="button" class="btn btn-primary" id="DeleteBtn">Да</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
     <header>
         <nav class="navig">
@@ -31,18 +49,9 @@
     </header>
 
     <main>
-
         <div class="zayavki">
             <h2>оставленные заявки</h2>
             <div class="form-container">
-                <div class="search-form">
-                    <input id="search" type="text" placeholder="Поиск" style="width: 120px; height: 25px;">
-                    <button id="sB">#</button>
-                </div>
-                <div class="fill-form">
-                    <input id="fill" type="text" placeholder="Цель" style="width: 100px; height: 25px;">
-                </div>
-
                 <div class="table-container">
                     <table id="zayavkiTable">
                         <thead>
@@ -56,29 +65,24 @@
                         </thead>
 
                     </table>
-
-                    <div class="pagination">
-                        <ul>
-
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
-
-
-
-
-
     </main>
 
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; Все права защишены</p>
-            <p>Фирма не несет ответственности за что бы то ни было, по вине кого бы то ни было</p>
+    <footer class="footer bg-dark">
+        <div class="container text-white mx-2 p-3">
+            &copy; Все права защишены
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 
 </body>
 
