--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
                     <option value="1" selected> </option>
                     <option value="1.2">хочу доплатить</option>
                     <option value="3">Сурдопереводчик</option>
-                    <option value="0.75">скидка персионерам</option>
+                    <option value="0.75">скидка пенсионерам</option>
                     <option value="0.95">хочу скидку</option>
                     <option value="6">хочу бесплатно</option>
 
